--- a/pasarela/docker-compose.yml
+++ b/pasarela/docker-compose.yml
@@ -28,6 +28,7 @@ services:
             -   api
         ports:
             -   '3000:3000'
+
     postgres:
         image: postgres
         restart: always
@@ -38,3 +39,16 @@ services:
             - POSTGRES_USER=root
             - POSTGRES_PASSWORD=root
             - POSTGRES_DB=root
+
+    portainer:
+        image: portainer/portainer-ce:latest
+        container_name: portainer
+        restart: unless-stopped
+        security_opt:
+            - no-new-privileges:true
+        volumes:
+            - /etc/localtime:/etc/localtime:ro
+            - /var/run/docker.sock:/var/run/docker.sock:ro
+            - ./portainer-data:/data
+        ports:
+            - 9000:9000
