--- a/pasarela/environmentVars/.social.env
+++ b/pasarela/environmentVars/.social.env
@@ -1,8 +1,8 @@
-DB_HOST= 'dev.juridigo.com'
-DB_PORT= 5432
-DB_USERNAME= 'juridigo_db_user'
-DB_PASSWORD= 'a&SpL-t0}.b.7kN'
-DB_NAME= 'juridigo_db'
+DB_HOST= 'containers-us-west-62.railway.app'
+DB_PORT= 7724
+DB_USERNAME= 'postgres'
+DB_PASSWORD= '8pUyZcWxgjfPY1zIlGFH'
+DB_NAME= 'railway'
 
 S3_ENDPOINT= "s3.dev.juridigo.com"
 S3_ACCESSKEY= "J34SEUFRR9A5WGL489KS"
