--- a/environmentVars/base.env
+++ b/environmentVars/base.env
@@ -9,7 +9,7 @@ S3_ACCESSKEY= "J34SEUFRR9A5WGL489KS"
 S3_SECRETKEY= "UP0NRYljJyoWe6ElX0nhvFGRWDiz9BVS666R6A41"
 
 API= 'https://api.dev.juridigo.com/api/v1'
-APP_PORT= 3500
+APP_PORT= 5000
 NODE_ENV= 'dev'
 
 ATTACHMENT_IMAGE_TIME_LAPSE= 14400
@@ -20,4 +20,4 @@ KEYCLOAK_ADMIN_CLIENT_SECRET= "e9436d2e-9fdc-4d12-b02e-39abe663696b"
 KEYCLOAK_ADMIN_CODE_GENERATION_SECRET= "e9436d2e-9fdc-4d12"
 KEYCLOAK_ADMIN_BASE_URL=  "https://admin.dev.juridigo.com/auth"
 
-PING= "http://localhost:5000/api/v1/transactions"
+PING= "node2:5000/api/v1/new"
