fix: update connectors response and request

--- a/payment/environmentVars/.social.env
+++ b/payment/environmentVars/.social.env
@@ -20,4 +20,4 @@ KEYCLOAK_ADMIN_CLIENT_SECRET= "e9436d2e-9fdc-4d12-b02e-39abe663696b"
 KEYCLOAK_ADMIN_CODE_GENERATION_SECRET= "e9436d2e-9fdc-4d12"
 KEYCLOAK_ADMIN_BASE_URL=  "https://admin.dev.juridigo.com/auth"
 
-PING= "node2:5000/api/v1/new"
+PING= "http://localhost:3500/api/v1/payments"
