--- a/conf.d/my_conf.conf
+++ b/conf.d/my_conf.conf
@@ -1,17 +1,17 @@
 server {
 
-    listen 3000;
+    listen 8080;
 
     location / {
-        proxy_pass "http://api:5000/api/v1/new";
+        proxy_pass "http://base:5000/api/v1";
     }
 
     location /payment {
-            proxy_pass http://api:5000/api/v1/new;
+            proxy_pass http://payment:5000/api/v1/payment;
     }
 
     location /base {
-        proxy_pass http://node2:5000/api/v1/new;
+        proxy_pass http://base:5000/api/v1/base;
     }
 
 }
