--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,22 @@
 version: '3.3'
 
 services:
-    api:
-        image: delete
+    payment_gateway:
+        image: payment
         #ports:
             #-   3500:5000
         env_file:
-            -   environmentVars/.social.env
+            -   environmentVars/payment.env
         depends_on:
             -   postgres
 
-    node2:
-        image: delete2
-        container_name: node2
+    base:
+        image: base
+        container_name: base
         ports:
-            -   "3500:5000"
+            -   "5000:5000"
         env_file:
-            - environmentVars/.social.env
+            - environmentVars/base.env
         depends_on:
             - postgres
 
@@ -27,7 +27,7 @@ services:
         depends_on:
             -   api
         ports:
-            -   '3000:3000'
+            -   '8080:8080'
 
     postgres:
         image: postgres
