--- a/environmentVars/payment.env
+++ b/environmentVars/payment.env
@@ -1,8 +1,8 @@
-DB_HOST= 'containers-us-west-62.railway.app'
-DB_PORT= 7724
-DB_USERNAME= 'postgres'
-DB_PASSWORD= '8pUyZcWxgjfPY1zIlGFH'
-DB_NAME= 'railway'
+DB_HOST= 'postgres'
+DB_PORT= 5432
+DB_USERNAME= 'root'
+DB_PASSWORD= 'root'
+DB_NAME= 'root'
 
 S3_ENDPOINT= "s3.dev.juridigo.com"
 S3_ACCESSKEY= "J34SEUFRR9A5WGL489KS"
