--- a/conf.d/my_conf.conf
+++ b/conf.d/my_conf.conf
@@ -3,7 +3,7 @@ server {
     listen 8080;
 
     location / {
-        proxy_pass "http://base:5000/api/v1";
+        proxy_pass http://front:4000/;
     }
 
     location /payment {
